--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPages.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPages.rtl.css
@@ -3,6 +3,8 @@
   color: #181C1D;
   border-radius: 7px;
   overflow: hidden;
+  margin-top: 10px;
+  max-width: 800px;
 }
 .static-page h1 {
   background: #4190B9;
@@ -17,4 +19,49 @@
 .static-page .content {
   background: #f5f5f5;
   color: #181C1D;
+}
+.help-page {
+  max-width: 800px;
+}
+.help-page .portlet.light,
+.help-page .nav-tabs {
+  background: none;
+}
+.help-page .panel-default > .panel-heading {
+  background: #808080;
+  color: #f5f5f5;
+  font-size: 18px;
+  border-radius: 0;
+}
+.help-page .in ~ .panel-heading {
+  background: #4190B9;
+}
+.help-page .panel-group .panel {
+  color: #181C1D;
+  border: none;
+  border-radius: 7px;
+  overflow: hidden;
+}
+.help-page .nav-tabs {
+  margin-bottom: 0;
+}
+.help-page .nav-tabs li {
+  margin: 0;
+}
+.help-page .nav-tabs li > a {
+  font-size: 14px;
+}
+.help-page .portlet.light .portlet-body {
+  padding-top: 15px;
+}
+.help-page .portlet.light .caption {
+  padding-top: 10px;
+  font-size: 16px;
+}
+.help-page .portlet.light > .portlet-title {
+  border-bottom: 1px solid #F4F4F4;
+  min-height: 12px;
+}
+.help-page .col-md-9 {
+  width: 100%;
 }
